added health api checkpoint
